src/objects/Lab_and_Test__c.object
<CustomObject>
    <fields>
        <fullName>ALT_Institutional_Reference_Range__c</fullName>
        <label>ALT Institutional Reference Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALT_Result__c</fullName>
        <label>ALT Result</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ALT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ANC_Industrial_Reference_Range__c</fullName>
        <inlineHelpText>Absolute Neutrophil Count(ANC) Industrial Reference Range</inlineHelpText>
        <label>ANC Industrial Reference Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTT_IRR__c</fullName>
        <label>APTT IRR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTT_Result__c</fullName>
        <label>APTT Result</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AST_Institutional_Reference_Range__c</fullName>
        <label>AST Institutional Reference Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AST_Result__c</fullName>
        <label>AST Result</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AST__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Absolute_Neutrophil_Count_ANC_Result__c</fullName>
        <label>Absolute Neutrophil Count (ANC) Result</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Absolute_Neutrophil_Count_ANC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Absolute Neutrophil Count (ANC)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activated_partial_thromboplastin_time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activated partial thromboplastin time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Air_Conduction_Test_Left_Ear_0_25__c</fullName>
        <label>Air Conduction Test, Left Ear(0.25)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_Conduction_Test_Left_Ear_0_5__c</fullName>
        <label>Air Conduction Test, Left Ear(0.5)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_Conduction_Test_Left_Ear_1__c</fullName>
        <label>Air Conduction Test, Left Ear 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_Conduction_Test_Left_Ear_3__c</fullName>
        <label>Air Conduction Test, Left Ear 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_Conduction_Test_Left_Ear_4__c</fullName>
        <label>Air Conduction Test, Left Ear 4</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_Conduction_Test_Left_Ear_Result__c</fullName>
        <label>Air Conduction Test, Left Ear(0.25)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_Conduction_Test_Left_Ear__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Air Conduction Test, Left Ear</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Air_Conduction_Test_Right_Ear_0_5__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Air Conduction Test, Right Ear(0.5))</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Air_Conduction_Test_Right_Ear_1__c</fullName>
        <label>Air Conduction Test, Right Ear 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_Conduction_Test_Right_Ear_2__c</fullName>
        <label>Air Conduction Test, Right Ear 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_Conduction_Test_Right_Ear_3__c</fullName>
        <label>Air Conduction Test, Right Ear 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_Conduction_Test_Right_Ear_Result__c</fullName>
        <label>Air Conduction Test, Right Ear(0.25)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_Conduction_Test_Right_Ear__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Air Conduction Test, Right Ear</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Albumin_IRR__c</fullName>
        <defaultValue>&apos;&apos; &amp; &apos;1.0-2.0&apos;</defaultValue>
        <label>Albumin IRR</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Albumin_Result__c</fullName>
        <label>Albumin Result</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Albumin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Albumin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApprovalURL__c</fullName>
        <label>ApprovalURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Audiometry_Test__c</fullName>
        <label>Audiometry Test</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bone_Conduction_Test_Left_Ear_0_25__c</fullName>
        <label>Bone Conduction Test, Left Ear (0.25)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bone_Conduction_Test_Left_Ear_0_5__c</fullName>
        <label>Bone Conduction Test, Left Ear (0.5)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bone_Conduction_Test_Left_Ear_1__c</fullName>
        <label>Bone Conduction Test, Left Ear 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bone_Conduction_Test_Left_Ear_3__c</fullName>
        <label>Bone Conduction Test, Left Ear 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bone_Conduction_Test_Left_Ear_4__c</fullName>
        <label>Bone Conduction Test, Left Ear 4</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bone_Conduction_Test_Left_Ear__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bone Conduction Test, Left Ear</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bone_Conduction_Test_Right_Ear_0_25__c</fullName>
        <label>Bone Conduction Test, Right Ear(0.25)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bone_Conduction_Test_Right_Ear_0_5__c</fullName>
        <label>Bone Conduction Test, Right Ear(0.5)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bone_Conduction_Test_Right_Ear_1__c</fullName>
        <label>Bone Conduction Test, Right Ear 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bone_Conduction_Test_Right_Ear_2__c</fullName>
        <label>Bone Conduction Test, Right Ear 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bone_Conduction_Test_Right_Ear_3__c</fullName>
        <label>Bone Conduction Test, Right Ear 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bone_Conduction_Test_Right_Ear__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bone Conduction Test, Right Ear</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRF</label>
        <referenceTo>CRF__c</referenceTo>
        <relationshipLabel>Lab and Tests</relationshipLabel>
        <relationshipName>Lab_and_Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calcium_IRR__c</fullName>
        <defaultValue>&apos;&apos; &amp; &apos;0.40-1.00&apos;</defaultValue>
        <label>Calcium IRR</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calcium_Result__c</fullName>
        <label>Calcium Result</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calcium__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calcium</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cardiac_Echo_Date__c</fullName>
        <label>Cardiac Echo Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cardiac_Echo_Institutional_Lower_Limit__c</fullName>
        <label>Cardiac Echo Institutional Lower Limit</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cardiac_Echo_LVEF__c</fullName>
        <label>Cardiac  Echo LVEF</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cardiac_Echo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cardiac Echo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clinical_Hearing_Evaluation_Checklist__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Clinical Hearing Evaluation Checklist Completed</inlineHelpText>
        <label>Clinical Hearing Evaluation Checklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collection_Date__c</fullName>
        <label>Collection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Collection_Date_for_Investigative_Agent__c</fullName>
        <label>Collection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CompletedDate__c</fullName>
        <label>CompletedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Creatinine_Institutional_Reference_Range__c</fullName>
        <label>Creatinine Institutional Reference Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creatinine_Result__c</fullName>
        <label>Creatinine Result</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Creatinine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Creatinine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Time__c</fullName>
        <label>Effective_Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Save_and_Close__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Save and Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GGT_IRR__c</fullName>
        <defaultValue>&apos;&apos; &amp; &apos;0.40-1.00&apos;</defaultValue>
        <label>GGT IRR</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GGT_Result__c</fullName>
        <label>GGT Result</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GGT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GGT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Glucose_IRR__c</fullName>
        <defaultValue>&apos;&apos; &amp; &apos;0.40-1.00&apos;</defaultValue>
        <label>Glucose IRR</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Glucose_Result__c</fullName>
        <label>Glucose Result</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Glucose__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Glucose</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HgbA1C_IRR__c</fullName>
        <label>HgbA1C IRR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HgbA1C_Result__c</fullName>
        <label>HgbA1C Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HgbA1C__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HgbA1C</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LDH_IRR__c</fullName>
        <defaultValue>&apos;&apos; &amp; &apos;0.40-1.00&apos;</defaultValue>
        <label>LDH IRR</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDH_Result__c</fullName>
        <label>LDH Result</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LDH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Leukocytes_Institutional_Reference_Range__c</fullName>
        <label>Leukocytes Institutional Reference Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leukocytes_Result__c</fullName>
        <label>Leukocytes Result</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leukocytes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Leukocytes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUGA_Institutional_Lower_Limit_of_Normal__c</fullName>
        <label>MUGA Institutional Lower Limit of Normal</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUGA_Scan_Date__c</fullName>
        <label>MUGA Scan Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUGA_Scan_LVEF__c</fullName>
        <label>MUGA Scan LVEF</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUGA_Scan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MUGA Scan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Magnesium_IRR__c</fullName>
        <defaultValue>&apos;&apos; &amp; &apos;0.40-1.00&apos;</defaultValue>
        <label>Magnesium IRR</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Magnesium_Result__c</fullName>
        <label>Magnesium Result</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Magnesium__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Magnesium</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OriginalCRF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OriginalCRF</label>
        <referenceTo>Lab_and_Test__c</referenceTo>
        <relationshipLabel>Lab and Tests</relationshipLabel>
        <relationshipName>Lab_and_Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Screening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treatment</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phosphate_IRR__c</fullName>
        <defaultValue>&apos;&apos; &amp; &apos;0.40-1.00&apos;</defaultValue>
        <label>Phosphate IRR</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phosphate_Result__c</fullName>
        <label>Phosphate Result</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phosphate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phosphate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Platelets_Institutional_Reference_Range__c</fullName>
        <label>Platelets Institutional Reference Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platelets_Result__c</fullName>
        <label>Platelets Result</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Platelets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Platelets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prothrombin_time_PT_INR_IRR__c</fullName>
        <label>Prothrombin time (PT)/INR IRR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prothrombin_time_PT_INR_Result__c</fullName>
        <label>Prothrombin time (PT)/INR Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prothrombin_time_PT_INR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prothrombin time (PT)/INR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Root_CRF_Id__c</fullName>
        <label>Root CRF Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Completed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted by Lab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who is sign and submitting the record</description>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lab_and_Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Bilirubin_Institutional_Reference__c</fullName>
        <inlineHelpText>Total Bilirubin Institutional Reference Range</inlineHelpText>
        <label>Total Bilirubin Institutional Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Bilirubin_Result__c</fullName>
        <label>Total Bilirubin Result</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Bilirubin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Total Bilirubin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TrialPatient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TrialPatient</label>
        <referenceTo>TrialPatient__c</referenceTo>
        <relationshipLabel>Lab and Tests</relationshipLabel>
        <relationshipName>Lab_and_Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tympanometry_Result__c</fullName>
        <label>Tympanometry Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tympanometry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tympanometry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Urea_IRR__c</fullName>
        <defaultValue>&apos;&apos; &amp; &apos;0.40-1.00&apos;</defaultValue>
        <label>Urea IRR</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Urea_Result__c</fullName>
        <label>Urea Result</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Urea__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Urea</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uric_Acid_IRR__c</fullName>
        <defaultValue>&apos;&apos; &amp; &apos;0.40-1.00&apos;</defaultValue>
        <label>Uric Acid IRR</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uric_Acid_Result__c</fullName>
        <label>Uric Acid Result</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Uric_Acid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uric Acid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Urinalysis_Blood_IRR__c</fullName>
        <defaultValue>&apos;&apos; &amp; &apos;0.40-1.00&apos;</defaultValue>
        <label>Urinalysis, Blood IRR</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Urinalysis_Blood_Result__c</fullName>
        <label>Urinalysis, Blood Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Urinalysis_Blood__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Urinalysis, Blood</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Urinalysis_Protein_IRR__c</fullName>
        <defaultValue>&apos;&apos; &amp; &apos;0.40-1.00&apos;</defaultValue>
        <label>Urinalysis, Protein IRR</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Urinalysis_Protein_Result__c</fullName>
        <label>Urinalysis, Protein Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Urinalysis_Protein__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Urinalysis, Protein</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Urinalysis_Specific_gravity_IRR__c</fullName>
        <defaultValue>&apos;&apos; &amp; &apos;0.40-1.00&apos;</defaultValue>
        <label>Urinalysis, Specific gravity IRR</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Urinalysis_Specific_gravity_Result__c</fullName>
        <label>Urinalysis, Specific gravity Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Urinalysis_Specific_gravity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Urinalysis, Specific gravity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Urinalysis_pH_IRR__c</fullName>
        <defaultValue>&apos;&apos; &amp; &apos;0.40-1.00&apos;</defaultValue>
        <label>Urinalysis, pH IRR</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Urinalysis_pH_Result__c</fullName>
        <label>Urinalysis, pH Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Urinalysis_pH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Urinalysis, pH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pg_lab_Test_Id__c</fullName>
        <label>pg_lab&amp;Test_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Lab and Test</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Lab and Test Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lab and Tests</pluralLabel>
    <recordTypes>
        <fullName>AdHoc</fullName>
        <active>true</active>
        <label>AdHoc</label>
    </recordTypes>
    <recordTypes>
        <fullName>Approval_Pending</fullName>
        <active>true</active>
        <label>Approval Pending</label>
    </recordTypes>
    <recordTypes>
        <fullName>Live</fullName>
        <active>true</active>
        <label>Live</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Audiometry_Test_date_validation</fullName>
        <active>true</active>
        <description>The date field should not be a future date.</description>
        <errorConditionFormula>Audiometry_Test__c  &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Audiometry_Test__c</errorDisplayField>
        <errorMessage>You have entered a future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cardiac_Echo_Date_date_validation</fullName>
        <active>true</active>
        <description>The date field should not be a future date.</description>
        <errorConditionFormula>Cardiac_Echo_Date__c   &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Cardiac_Echo_Date__c</errorDisplayField>
        <errorMessage>You have entered a future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Collection_Date_date_validation</fullName>
        <active>true</active>
        <description>The date field should not be a future date.</description>
        <errorConditionFormula>Collection_Date__c    &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Collection_Date__c</errorDisplayField>
        <errorMessage>You have entered a future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Collection_Date_for_agent_date_validatio</fullName>
        <active>true</active>
        <description>The date field should not be a future date.</description>
        <errorConditionFormula>Collection_Date_for_Investigative_Agent__c   &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Collection_Date_for_Investigative_Agent__c</errorDisplayField>
        <errorMessage>You have entered a future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MUGA_Scan_Date_date_validatio</fullName>
        <active>true</active>
        <description>The date field should not be a future date.</description>
        <errorConditionFormula>MUGA_Scan_Date__c    &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>MUGA_Scan_Date__c</errorDisplayField>
        <errorMessage>You have entered a future date</errorMessage>
    </validationRules>
</CustomObject>